# Lenguaje_Programacion

./: dashboard.html  index.html  main.go  main.py  paraphp.txt
adivina/: Cargo.toml
adivina/src/: main.rs
c#/: c#.ipynb
fibonacci/src/: main.rs
gestor/: .gitignore  Cargo.toml  guia_de_uso.txt  tareas.json
gestor/src/: lib.rs  main.rs  manejador_archivos.rs  tarea.rs
gestor/testing/: tests.rs
go/: guia.txt  main.go  tasks.json
go/task/: delete.go  list.go  update.go
php/: php.ipynb
ruby/: ruby.ipynb
task/: add.go  manager.go  manager_test.go  task.go
temp/src/: main.rs
